--- a/app/src/main/assets/History.txt
+++ b/app/src/main/assets/History.txt
@@ -4,13 +4,17 @@ Bekannte Bugs:
     Rotation des Bildschirms führt zu Fehler in der Bildschirm-Aktualisierung
     Unterer Streifen wird an jedem Bildschirm abgeschnitten, kann nur durch verschieben des Kopfes sichbar gemacht werden
 
+2017-08-16  TyE:  V1.02
+    Oktavierung der Anfänge auf Strich-Nomenklatur geändert ( , ' " )
+    Notenlänge vorbereitet. Es fehlt noch: Vorspiel nach Länge
+
 2017-08-15  TyE:  Android-Studio, Gradle, Platforms upgrade
 
-2017-08-05  V1.01
+2017-08-05  TyE: V1.01
     Umlaute in Zipdateien ermöglicht. Funtioniert ab Nougat, darunter werden Umlaute mit '_' ersetzt.
     Upload auf https://github.com AquaBall
 
-2017-08-01  V1.0
+2017-08-01  TyE: V1.0
     Erster Release
         incl. mitgelieferte Zip-Dateien für Programm-Pakete
         Vorspielseite mit Akkorden und Liedanfang
